crates/glyph-cli/tests/corpus/valid/skill_meaningful_return_no_type_fixed.glyph
type Diagnosis = <"a structured diagnosis of repo scope">

skill produce_diagnosis() -> Diagnosis
    description: "Produce a diagnosis of repo scope."
    flow:
        return <"a structured diagnosis of repo scope">
