crates/glyph-cli/tests/corpus/invalid/imports/whole_module_alias_pascal_case.glyph
import "./aliased_value_lib.glyph" as Mod

skill main()
    description: "Whole-module alias forced to PascalCase — illegal."
    flow:
        return <"x">
